polish the apiDoc for comment and table service

--- a/apiDoc.yaml
+++ b/apiDoc.yaml
@@ -429,7 +429,7 @@ paths:
         '500':
           description: 服务器错误
 
-  /course/comment/:
+  /comment/:
     post:
       tags:
         - comment
@@ -438,10 +438,6 @@ paths:
         - in: header
           name: token
           description: token
-          required: true
-          type: string
-        - in: header
-          name: userId
           required: true
           type: string
         - in: body
@@ -470,6 +466,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -477,6 +475,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -484,10 +484,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/{courseCommentId}/:
+  /comment/{id}/:
     get:
       tags:
         - comment
@@ -498,27 +500,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
-        - in: query
-          name: pageNum
-          type: string
-        - in: query
-          name: pageSize
-          type: string
-        - in: query
-          name: lasthotCommentId
           type: string
       responses:
         "200":
@@ -535,6 +519,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -542,6 +528,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -549,6 +537,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -556,6 +546,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -569,18 +561,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
       responses:
         "200":
@@ -595,6 +578,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -602,6 +587,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -609,6 +596,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -616,10 +605,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/{courseCommentId}/commentList/:
+  /comment/{id}/commentList/:
     get:
       tags:
         - comment
@@ -630,18 +621,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
         - in: query
           name: pageNum
@@ -706,6 +688,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -713,6 +697,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -720,6 +706,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -727,11 +715,13 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
 
-  /course/{courseId}/comment/{targetId}/like/:
+  /comment/{id}/like/:
     put:
       tags:
         - comment
@@ -742,17 +732,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          required: true
-          type: string
-        - in: path
-          name: targetId
+          name: id
           required: true
           description: 点赞对象id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
         - in: body
           name: data
@@ -781,6 +763,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -788,6 +772,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -795,10 +781,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/:
+  /comment/{id}/new/:
     post:
       tags:
         - comment
@@ -809,8 +797,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
+          name: id
           required: true
+          description: 评论对象id
           type: string
         - in: body
           name: data
@@ -818,9 +807,6 @@ paths:
           schema:
             type: object
             properties:
-              targetId:
-                type: string
-                description: 评论对象id
               content:
                 type: string
                 description: 评论内容
@@ -842,6 +828,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -849,6 +837,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -856,6 +846,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -863,6 +855,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -874,9 +868,6 @@ paths:
       parameters:
         - in: header
           name: token
-          type: string
-        - in: header
-          name: userId
           type: string
       responses:
         "200":
@@ -898,6 +889,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -905,6 +898,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -912,6 +907,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -922,13 +919,12 @@ paths:
       parameters:
         - in: header
           name: token
+          required: true
           type: string
-        - in: header
-          name: targetTableId
-          description: 课表副本id
-          type: string
-        - in: header
-          name: userId
+        - in: query
+          name: id
+          required: false
+          description: 若是创建副本，则为课表副本id，若是添加新课标，则为空
           type: string
       responses:
         "200":
@@ -945,6 +941,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -952,6 +950,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -959,10 +959,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/:
+  /table/{id}/:
     delete:
       tags:
         - table
@@ -973,12 +975,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
-          type: string
-        - in: header
-          name: userId
-          required: true
+          description: 课表id
           type: string
       responses:
         "200":
@@ -993,6 +992,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -1000,6 +1001,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -1007,6 +1010,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -1014,10 +1019,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/rename/:
+  /table/{id}/rename/:
     put:
       tags:
         - table
@@ -1028,8 +1035,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: body
           name: data
@@ -1039,10 +1047,6 @@ paths:
             properties:
               newName:
                 type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
       responses:
         "200":
           description: OK
@@ -1056,6 +1060,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -1063,6 +1069,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -1070,6 +1078,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -1077,10 +1087,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/class/{classId}/:
+  /table/{id}/class/{classId}/:
     post:
       tags:
         - table
@@ -1088,17 +1100,16 @@ paths:
       parameters:
         - in: header
           name: token
+          required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: path
           name: classId
           required: true
-          type: string
-        - in: header
-          name: userId
           type: string
       responses:
         "200":
@@ -1117,6 +1128,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -1124,6 +1137,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -1131,6 +1146,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -1144,17 +1161,15 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: path
           name: classId
           required: true
           type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
+
       responses:
         "200":
           description: OK
@@ -1168,6 +1183,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -1175,6 +1192,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -1182,6 +1201,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -1189,9 +1210,10 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
-
 
 definitions:
   RequestHeader:  #废弃
