--- a/doc/comment_table.yaml
+++ b/doc/comment_table.yaml
@@ -16,7 +16,7 @@ schemes:
   - https
 
 paths:
-  /course/comment/:
+  /comment/:
     post:
       tags:
         - comment
@@ -25,10 +25,6 @@ paths:
         - in: header
           name: token
           description: token
-          required: true
-          type: string
-        - in: header
-          name: userId
           required: true
           type: string
         - in: body
@@ -57,6 +53,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -64,6 +62,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -71,10 +71,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/{courseCommentId}/:
+  /comment/{id}/:
     get:
       tags:
         - comment
@@ -85,27 +87,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
-        - in: query
-          name: pageNum
-          type: string
-        - in: query
-          name: pageSize
-          type: string
-        - in: query
-          name: lasthotCommentId
           type: string
       responses:
         "200":
@@ -122,6 +106,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -129,6 +115,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -136,6 +124,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -143,6 +133,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -156,18 +148,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
       responses:
         "200":
@@ -182,6 +165,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -189,6 +174,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -196,6 +183,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -203,10 +192,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/{courseCommentId}/commentList/:
+  /comment/{id}/commentList/:
     get:
       tags:
         - comment
@@ -217,18 +208,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: path
-          name: courseCommentId
+          name: id
           required: true
           description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
         - in: query
           name: pageNum
@@ -293,6 +275,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -300,6 +284,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -307,6 +293,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -314,11 +302,13 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
 
-  /course/{courseId}/comment/{targetId}/like/:
+  /comment/{id}/like/:
     put:
       tags:
         - comment
@@ -329,17 +319,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
-          required: true
-          type: string
-        - in: path
-          name: targetId
+          name: id
           required: true
           description: 点赞对象id
-          type: string
-        - in: header
-          name: userId
-          required: true
           type: string
         - in: body
           name: data
@@ -368,6 +350,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -375,6 +359,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -382,10 +368,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /course/{courseId}/comment/:
+  /comment/{id}/new/:
     post:
       tags:
         - comment
@@ -396,8 +384,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: courseId
+          name: id
           required: true
+          description: 评论对象id
           type: string
         - in: body
           name: data
@@ -405,9 +394,6 @@ paths:
           schema:
             type: object
             properties:
-              targetId:
-                type: string
-                description: 评论对象id
               content:
                 type: string
                 description: 评论内容
@@ -429,6 +415,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -436,6 +424,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -443,6 +433,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -450,6 +442,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -461,9 +455,6 @@ paths:
       parameters:
         - in: header
           name: token
-          type: string
-        - in: header
-          name: userId
           type: string
       responses:
         "200":
@@ -485,6 +476,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -492,6 +485,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -499,6 +494,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -509,13 +506,12 @@ paths:
       parameters:
         - in: header
           name: token
+          required: true
           type: string
-        - in: header
-          name: targetTableId
-          description: 课表副本id
-          type: string
-        - in: header
-          name: userId
+        - in: query
+          name: id
+          required: false
+          description: 若是创建副本，则为课表副本id，若是添加新课标，则为空
           type: string
       responses:
         "200":
@@ -532,6 +528,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -539,6 +537,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -546,10 +546,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/:
+  /table/{id}/:
     delete:
       tags:
         - table
@@ -560,12 +562,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
-          type: string
-        - in: header
-          name: userId
-          required: true
+          description: 课表id
           type: string
       responses:
         "200":
@@ -580,6 +579,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -587,6 +588,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -594,6 +597,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -601,10 +606,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/rename/:
+  /table/{id}/rename/:
     put:
       tags:
         - table
@@ -615,8 +622,9 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: body
           name: data
@@ -626,10 +634,6 @@ paths:
             properties:
               newName:
                 type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
       responses:
         "200":
           description: OK
@@ -643,6 +647,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -650,6 +656,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -657,6 +665,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -664,10 +674,12 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
-  /table/{tableId}/class/{classId}/:
+  /table/{id}/class/{classId}/:
     post:
       tags:
         - table
@@ -675,17 +687,16 @@ paths:
       parameters:
         - in: header
           name: token
+          required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: path
           name: classId
           required: true
-          type: string
-        - in: header
-          name: userId
           type: string
       responses:
         "200":
@@ -704,6 +715,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -711,6 +724,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -718,6 +733,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -731,17 +748,15 @@ paths:
           required: true
           type: string
         - in: path
-          name: tableId
+          name: id
           required: true
+          description: 课表id
           type: string
         - in: path
           name: classId
           required: true
           type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
+
       responses:
         "200":
           description: OK
@@ -755,6 +770,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '401':
@@ -762,6 +779,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '404':
@@ -769,6 +788,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
         '500':
@@ -776,6 +797,8 @@ paths:
           schema:
             type: object
             properties:
+              code:
+                type: integer
               msg:
                 type: string
 
@@ -1049,18 +1072,3 @@ definitions:
         type: string
       tagId:
         type: string
-
-  # CommentToUser:
-  #   type: object
-  #   description: 评论与用户的多对多关系表
-  #   properties:
-  #     id:
-  #       type: string
-  #       description: 关系表id
-  #     commentId:
-  #       type: string
-  #     userId:
-  #       type: string
-  #     isLike:
-  #       type: boolean
-  #       description: 是否已点赞
